@@ -51,15 +51,15 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_WildType.sql.rpt">Genotypes where Allele 1 is "wild type"</A>
 <LI><A HREF="/data/reports/qcreports_db/output/ALL_CellLineProvider.sql.rpt">Mutant ES Cell Line Provider Check</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PHENO_ImageCheck.sql.rpt">Image Check</A>
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_SequenceReference.sql.rpt">Reference associations created by the gene trap load</A
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_GermlineTransmission.sql.rpt">Germline Transmission Checks</A
-<LI><A HREF="/data/reports/qcreports_db/output/allstrain.rpt">Allele Strain of Origin vs. Parent Cell Line Strain</A
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_SequenceReference.sql.rpt">Reference associations created by the gene trap load</A>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_GermlineTransmission.sql.rpt">Germline Transmission Checks</A>
+<LI><A HREF="/data/reports/qcreports_db/output/allstrain.rpt">Allele Strain of Origin vs. Parent Cell Line Strain</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_AllelePairCheck.sql.rpt">Genotypes where Allele Pairs are associated with different Markers</A
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_UncodedReference.rpt">Alleles with most uncoded references</A
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_NoPhenoRef.rpt">Alleles with no phenotype but have additional references</A
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_NoMCL.sql.rpt">Alleles of type Targeted or Gene Trap that have no MCL association</A
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_MCLAllele.sql.rpt">MCL's that are associated with more than one Allele</A
-<LI><A HREF="/data/reports/qcreports_db/output/ALL_Notes.rpt">Allele Notes with HTML errors</A
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_UncodedReference.rpt">Alleles with most uncoded references</A>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_NoPhenoRef.rpt">Alleles with no phenotype but have additional references</A>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_NoMCL.sql.rpt">Alleles of type Targeted or Gene Trap that have no MCL association</A>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_MCLAllele.sql.rpt">MCL's that are associated with more than one Allele</A>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_Notes.rpt">Allele Notes with HTML errors</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_OrphanGenotype.sql.rpt">Orphan Genotypes</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_SharedSynonyms.rpt">Markers with Shared Synonyms</A> <B>(dlb)</B>
 <LI><A HREF="http://aretha.jax.org/jax/tbase">TBASE</A>
@@ -299,26 +299,18 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/usrlocalmgi/live/dataload/machipload/index.html">Microarray Association Loads</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/pirsfload/index.html">PIRSF Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/ccdsload/index.html">CCDS Load</A>
-</OL>
-
-<OL>
+<LI><A HREF="/usrlocalmgi/live/dataload/genetrapload/index.html">dBGSS Gene Trap Load</A>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MAindex.html">Adult Mouse Anatomy Vocabulary/DAG Load</A> <B>(terryh)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/emageload/index.html">EMAGE Load</A> <B>(cms)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/geoload/index.html">GEO Load</A> <B>(cms)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/gensatload/index.html">GENSAT Load</A> <B>(cms)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/arrayexpload/index.html">ArrayExpress Load</A> <B>(cms)</B>
-</OL>
-
-<OL>
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/GOindex.html">GO Vocabulary/DAG Load</A> <B>(hjd)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/goaload/index.html">GOA/Mouse Load</A> <B>(hjd)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/goahumanload/index.html">GOA/Human Load</A> <B>(hjd)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/goratload/index.html">GO/Rat Load</A> <B>(hjd)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/gorefgenload/index.html">GO/RefGenome Load</A> <B>(hjd)</B>
 <LI><A HREF="/usrlocalmgi/live/dataload/gocfpload/index.html">GO/CFP (aka GOC) Load</A> <B>(hjd)</B>
-</OL>
-
-<OL>
 <LI><A HREF="/usrlocalmgi/live/dataload/orthologyload/index.html">Orthology Loads</A>
 
 <LI><A HREF="/usrlocalmgi/live/dataload/vocload/MPindex.html">Mammalian Phenotype Vocabulary/DAG Load</A>
