@@ -1,3 +1,9 @@
+TAG: qcreports_db-4-4-1-28
+DATE: 06/20/2011
+STAFF: sc
+CHANGES: qcr.html
+1) added genetrapload to Data Loads section
+
 TAG: qcreports_db-4-4-1-27
 DATE: 06/20/2011
 STAFF: lec
